--- a/HackathonPuzzleGame2020/HackathonPuzzleGame2020/Base.lproj/Main.storyboard
+++ b/HackathonPuzzleGame2020/HackathonPuzzleGame2020/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--BGSU Hackathon 2020-->
         <scene sceneID="M2q-eW-gdO">
             <objects>
-                <collectionViewController id="qjc-NG-pVm" sceneMemberID="viewController">
+                <collectionViewController id="qjc-NG-pVm" customClass="PuzzleCollectionViewController" customModule="HackathonPuzzleGame2020" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="6B5-kq-0QA">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,7 +22,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="sWa-e1-0LE">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="sWa-e1-0LE" customClass="ImageCollectionViewCell" customModule="HackathonPuzzleGame2020" customModuleProvider="target">
                                 <rect key="frame" x="73.5" y="0.0" width="267" height="219"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="69D-rc-ujA">
@@ -36,6 +36,7 @@
                                         </imageView>
                                     </subviews>
                                 </collectionViewCellContentView>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <size key="customSize" width="267" height="219"/>
                             </collectionViewCell>
                         </cells>
