puzzle collection view, added more pictures to assest
Completed the puzzle collection view

--- a/HackathonPuzzleGame2020/HackathonPuzzleGame2020/Base.lproj/Main.storyboard
+++ b/HackathonPuzzleGame2020/HackathonPuzzleGame2020/Base.lproj/Main.storyboard
@@ -38,6 +38,9 @@
                                 </collectionViewCellContentView>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <size key="customSize" width="267" height="219"/>
+                                <connections>
+                                    <outlet property="puzzleImage" destination="ksI-2B-USd" id="e7h-Ed-XMi"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
