--- a/HackathonPuzzleGame2020/HackathonPuzzleGame2020/Base.lproj/Main.storyboard
+++ b/HackathonPuzzleGame2020/HackathonPuzzleGame2020/Base.lproj/Main.storyboard
@@ -66,6 +66,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="qSE-Oy-DIo" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="JTO-1I-PC9">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -82,13 +83,13 @@
         <scene sceneID="jkr-cb-wXA">
             <objects>
                 <navigationController id="qd9-hM-CgB" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="3 in 1" selectedImage="paperplane" catalog="system" id="crr-E5-1mt"/>
+                    <tabBarItem key="tabBarItem" title="3 in 1" selectedImage="pencil" catalog="system" id="crr-E5-1mt"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="j76-ri-b4a">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="kyC-1s-OLd" kind="show" id="HOP-Wh-TBv"/>
+                        <segue destination="kyC-1s-OLd" kind="relationship" relationship="rootViewController" id="xCu-zc-YcE"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tmt-4s-d5O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -100,11 +101,11 @@
             <objects>
                 <viewController id="kyC-1s-OLd" customClass="ViewControllerRPS" customModule="HackathonPuzzleGame2020" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ep6-Tm-xzJ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleAspectFit" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="j9w-av-30Z">
-                                <rect key="frame" x="20" y="279" width="348.5" height="65"/>
+                                <rect key="frame" x="20" y="367" width="348.5" height="65"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="goj-Xl-oZ9">
                                         <rect key="frame" x="0.0" y="0.0" width="116" height="65"/>
@@ -132,7 +133,7 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a Button from the List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wkI-jD-WFb">
-                                <rect key="frame" x="20" y="398" width="348.5" height="93"/>
+                                <rect key="frame" x="20" y="486" width="348.5" height="93"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="93" id="VYK-UN-rGB"/>
                                 </constraints>
@@ -162,11 +163,11 @@
             <objects>
                 <viewController id="k6T-OU-FjM" customClass="ResultsViewController" customModule="HackathonPuzzleGame2020" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="okQ-SI-KJX">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2Iz-7f-dt2">
-                                <rect key="frame" x="0.0" y="278" width="311" height="90"/>
+                                <rect key="frame" x="0.0" y="366" width="311" height="90"/>
                                 <subviews>
                                     <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="scK-3d-Nez">
                                         <rect key="frame" x="0.0" y="0.0" width="155.5" height="90"/>
@@ -219,7 +220,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hzu-pg-HcT">
-                                <rect key="frame" x="96" y="533" width="205" height="30"/>
+                                <rect key="frame" x="96" y="538" width="205" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="NnT-gB-BMy"/>
                                 </constraints>
@@ -277,7 +278,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="paperplane" catalog="system" width="64" height="60"/>
+        <image name="pencil" catalog="system" width="64" height="56"/>
         <image name="resize-1582459116136661027resize1582458815897805259ClipartKey1094183.png" width="75" height="48.75"/>
         <image name="resize-15824591501982636795resize1582458760577264455ClipartKey1094170.png" width="75" height="48.75"/>
         <image name="resize-15824591741604046828rock.png" width="75" height="48.75"/>
